--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^3.11.0"
+  },
+  "engines" :{
+    "node": ">=12"
   }
 }
