--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
     "bootstrap": "^4.4.1",
+    "jquery": "^3.5.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^3.11.0"
   },
-  "engines" :{
+  "engines": {
     "node": ">=12"
   }
 }
